--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.4.32
+@version        1.4.33
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -1435,6 +1435,10 @@ body.mediawiki .ve-ce-mwLatexNode .mwe-math-mathml-a11y {
 	h2#globalusage /* Title "File usage on other wikis" */
 	{
 		display: none;
+	}
+
+	.mainpage-maintable div[style='margin-left: 0.3em; padding-right: 0.6em; line-height: 1.3; color: inherit; font-size: 1.4em'] {
+		color: #bbb !important;
 	}
 }
 
