--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.4.44
+@version        1.4.45
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -1351,8 +1351,7 @@ td
 }
 
 html {
-	scrollbar-width: thin;
-	scrollbar-color: #555 #000;
+	width: 98%; /* Drop horizontal scroll on editing */
 }
 
 
