--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -2,7 +2,7 @@
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
 @version        1.5.3
-@description    Black, with removed elements that I do not need.
+@description    Black, remove elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
 
