--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.5.3
+@version        1.5.4
 @description    Black, remove elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -1047,6 +1047,8 @@ ul ::marker {
 /* Wikipedia: link edit popup "Edit link": onhover article names */
 /* .oo-ui-menuOptionWidget.oo-ui-optionWidget-highlighted .mw-widget-titleOptionWidget-description, */
 .oo-ui-menuOptionWidget.oo-ui-optionWidget-highlighted a span,
+
+.rt-target cite *, /* [1] reference hover https://en.wikipedia.org/wiki/Copper_tape */
 
 ul#embed-right-menu .popover-content,
 li[role='option'],
