--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.6.0
+@version        1.7.0
 @description    Black, remove elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -1474,6 +1474,7 @@ body.mediawiki .ve-ce-mwLatexNode .mwe-math-mathml-a11y {
 	#mw-imagepage-section-filehistory > p,
 	#metadata,
 	.mw-imagepage-section-metadata > p,
+	#mw-category-media h2, /* "Media in category" https://commons.wikimedia.org/wiki/Category:Church_of_the_Immaculate_Conception_of_Blessed_Virgin_Mary_and_the_convent_of_Bernardine_in_Slonim */
 	h2#filelinks, /* File usage on Commons */
 	h2#globalusage /* Title "File usage on other wikis" */
 	{
