.mw-editnotice hide

--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.8.3
+@version        1.9.0
 @description    Black, remove elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -111,6 +111,7 @@ a[title='Log out'],
 #ct-popup, /* https://be.wikisource.org/wiki/Новая_зямля_(1923)/I when mouse hover on page number, to drop vertical scroll */
 #editpage-copywarn2, /* "Калі ласка, не капіюйце тэксты з крыніц, якія ахоўваюцца аўтарскімі правамі (з кніг, сайтаў і іншых), бо такія матэрыялы будуць выдаленыя */
 #editpage-copywarn3, /* Editing page: "Do not copy text from other websites without permission. It will be deleted. */
+.mw-editnotice, /* Wikipedia: editing page: "Используйте только максимально достоверные источники. Эта статья рассказывает о ныне живущем человеке и потому должна соответствовать правилу о биографиях современников" https://ru.wikipedia.org/w/index.php?title=Горгиладзе,_Георгий_Мевлудович&action=edit */
 .mwe-upwiz-metadata-notice, /* "EXIF metadata in this file may contain location or other personal data automatically added by your camera" */
 .mwe-upwiz-license-metadata, /* Commons uploading: step Describe: bottom of the page - block about captions license (always the same text) */
 
