--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1485,6 +1485,7 @@ body.mediawiki .ve-ce-mwLatexNode .mwe-math-mathml-a11y {
 	#mw-category-media h2, /* "Media in category" https://commons.wikimedia.org/wiki/Category:Church_of_the_Immaculate_Conception_of_Blessed_Virgin_Mary_and_the_convent_of_Bernardine_in_Slonim */
 	h2#filelinks, /* File usage on Commons */
 	h2#globalusage /* Title "File usage on other wikis" */
+	.gallerytext /* https://commons.wikimedia.org/wiki/Category:Church_of_the_Immaculate_Conception_of_Blessed_Virgin_Mary_and_the_convent_of_Bernardine_in_Slonim */
 	{
 		display: none;
 	}
@@ -1509,11 +1510,6 @@ body.mediawiki .ve-ce-mwLatexNode .mwe-math-mathml-a11y {
 	li.gallerybox {
 		width: 130px !important;
 		margin-bottom: 26px;
-	}
-
-	/* https://commons.wikimedia.org/wiki/Category:Church_of_the_Immaculate_Conception_of_Blessed_Virgin_Mary_and_the_convent_of_Bernardine_in_Slonim */
-	.gallerytext {
-		display: none !important;
 	}
 
 	/* Category: make thumbnails bigger https://commons.wikimedia.org/wiki/Category:Church_of_the_Immaculate_Conception_of_Blessed_Virgin_Mary_and_the_convent_of_Bernardine_in_Slonim */
